--- a/docker-registry-with-minio/docker-compose.yml
+++ b/docker-registry-with-minio/docker-compose.yml
@@ -8,8 +8,8 @@ services:
             - 9000:9000
         command: [ "server", "/export" ]
         environment:
-            MINIO_ACCESS_KEY: minioaccesskey
-            MINIO_SECRET_KEY: miniosecretkey
+            MINIO_ACCESS_KEY: minio
+            MINIO_SECRET_KEY: minio123
             MINIO_REGION: us-east-1
 
     registry:
