--- a/docker-registry-with-minio/registry-config.yml
+++ b/docker-registry-with-minio/registry-config.yml
@@ -12,11 +12,12 @@ storage:
     cache:
         layerinfo: inmemory
     s3:
-        accesskey: minioaccesskey
-        secretkey: miniosecretkey
+        accesskey: minio
+        secretkey: minio123
         region: us-east-1
         # FIXME see issue https://git.io/v7UO0
-        regionendpoint: http://192.168.1.243:9000/
+        # regionendpoint: http://minio:9000/
+        regionendpoint: http://192.168.100.113:9000/
         bucket: docker-registry
         encrypt: false
         secure: false
