--- a/dcos/docker-compose.yml
+++ b/dcos/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     zk:
         image: zookeeper:3.4
         restart: always
-        ports:
-            - 2181:2181
+        # ports:
+        #     - 2181:2181
 
     mesos-master:
         image: mesosphere/mesos-master:1.3.0
@@ -20,7 +20,7 @@ services:
             - 5050:5050
 
     marathon:
-        image: mesosphere/marathon:v1.4.5
+        image: mesosphere/marathon:v1.4.7
         restart: always
         links:
             - zk
@@ -28,9 +28,26 @@ services:
             MARATHON_MASTER: zk://zk:2181/mesos
             MARATHON_ZK: zk://zk:2181/marathon
             MARATHON_MESOS_ROLE: slave_public
-            MARATHON_DEFAULT_ACCEPTED_RESOURCE_ROLES: "*"
         ports:
             - 8080:8080
+
+    chronos:
+        image: mesosphere/chronos:chronos-2.5.0-0.1.20170628182950.ubuntu1404-mesos-1.3.0
+        restart: always
+        command:
+            - "chronos"
+            - "run_jar"
+            - "--master"
+            - "zk://zk:2181/mesos"
+            - "--zk_hosts"
+            - "zk:2181"
+            - "--http_port"
+            - "8080"
+        links:
+            - zk
+            - mesos-master
+        ports:
+            - 8081:8080
 
     mesos-slave:
         build:
